# verdin-credit-platform

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.local-pilot.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  turbo.json
apps/api/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_expand_cases_module.py  003_credit_account_intelligence.py  004_document_foundation.py  005_document_ocr.py  006_document_classification.py  007_document_metadata_resolution.py  008_timeline_audit_engine.py  009_task_management.py  010_document_parsed_credit_reports.py  010_parsed_credit_reports.py  011_dispute_letter_drafts.py  012_in_app_notifications.py  013_clients_and_contacts.py  014_client_portal_users.py  015_cases_client_id.py  016_email_delivery_logs.py  017_compliance_consent_retention.py  018_secure_messaging_threads.py  019_organization_api_keys.py  021_user_identity_enrollment.py  022_organization_billing.py  023_retention_enforcement_runs.py  024_portal_push_notifications.py  025_reporting_materialized_views.py  026_user_phone_sms_delivery_logs.py  027_billing_usage_events.py  028_scim_provision_logs.py  029_predictive_outcome_snapshots.py  030_api_key_rotation_logs.py  031_batch_document_summary_runs.py  032_billing_invoicing_runs.py  033_idp_federation_providers.py  034_sms_marketing_campaign_runs.py  035_agent_observability_runs.py  036_billing_invoice_collection_runs.py  037_saml_federation_metadata.py  038_sms_marketing_delivery.py  039_agent_execution.py  040_hris_bidirectional_sync.py  (+59 more)
apps/api/api/auth/: __init__.py  dependencies.py  security.py
apps/api/api/core/: __init__.py  agent_arbitrary_execution.py  agent_execution.py  agent_external_tool_calling.py  agent_observability.py  agent_supervised_loops.py  agent_unsupervised_loops.py  api_developer_portal.py  api_key_rate_limit.py  api_keys.py  audit.py  autonomous_bureau_filing.py  batch_llm_summaries.py  billing_invoice_collection.py  billing_invoicing.py  bulk_idp_provisioning.py  bureau_live_api.py  bureau_refiling.py  bureau_unsupervised_refiling.py  client_enrollment.py  compliance.py  config.py  constants.py  cross_org_benchmark.py  dispute_bureau_submission.py  dispute_filing_prep.py  email_delivery.py  enterprise.py  enterprise_identity.py  enterprise_oidc.py  enterprise_reporting.py  enterprise_totp.py  events.py  exceptions.py  feature_flags.py  fully_autonomous_bureau_api_filing.py  hris_bidirectional_sync.py  hris_lifecycle_sync.py  hris_passwordless_ui.py  idp_federation.py  (+40 more)
apps/api/api/database/: base.py  database.py  session.py
apps/api/api/middleware/: __init__.py  logging.py
apps/api/api/models/: __init__.py
apps/api/api/modules/: __init__.py  registry.py
apps/api/api/repositories/: __init__.py  account.py  case.py  document.py  task.py  user.py  user_repository.py
apps/api/api/routers/: __init__.py  auth.py  health.py
apps/api/api/schemas/: __init__.py
apps/api/api/services/: __init__.py  auth_service.py
apps/api/api/versions/: __init__.py  constants.py  discovery.py  docs.py  openapi.py  registry.py
apps/api/scripts/: ensure_demo_billing.py  seed.py  verify_stripe_config.py
apps/api/tests/: conftest.py  test_auth_security.py  test_config_security.py  test_health.py  test_security.py  test_versioning.py
apps/api/tests/accounts/: conftest.py  test_accounts.py  test_credit_analysis.py  test_credit_analysis_export.py  test_credit_analysis_runs.py  test_dispute_drafts.py  test_dispute_legal_references.py  test_dispute_letter_export.py  test_dispute_letter_mail_export.py  test_dispute_mail_attachments.py  test_dispute_report_redaction.py  test_dispute_response_records.py  test_intelligence.py  test_intelligence_calibration.py  test_litigation_cross_bureau.py  test_litigation_packet.py  test_litigation_packet_export.py  test_redispute_readiness.py  test_reinvestigation_analytics.py  test_reinvestigation_clock.py  test_reinvestigation_summary.py
apps/api/tests/billing/: conftest.py  (+10 more)
apps/worker/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
apps/worker/tests/: test_batch_document_llm_summary.py  test_credit_report_pipeline.py  test_ocr_classify_enqueue.py  test_ocr_extractor.py  test_overdue_investigation_scan.py  test_reporting_mv_refresh.py  test_retention_enforcement_scan.py  test_runner.py  test_sms_marketing_campaign_delivery.py
apps/worker/worker/: __init__.py  base.py  batch_document_llm_summary.py  batch_summary_tables.py  compliance_tables.py  config.py  constants.py  db.py  documents.py  documents_table.py  metadata_documents.py  metadata_tables.py  orchestrator.py  overdue_investigations.py  parsed_report_tables.py  parsed_reports.py  queue.py  registry.py  reporting_mv_refresh.py  reporting_tables.py  retention_enforcement.py  runner.py  sms_marketing_delivery.py  sms_marketing_tables.py  storage.py  tasks.py  timeline.py
(+1496 files in other folders)
