[project]
name = "verdin-api"
version = "4.2.0"
description = "Verdin Credit Platform API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic[email]>=2.10.3",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.20",
    "structlog>=24.4.0",
    "redis>=5.2.1",
    "httpx>=0.28.1",
    "pywebpush>=2.0.0",
    "reportlab>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "mypy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = [".", "../../packages/document-classification", "../../packages/document-metadata", "../../packages/entity-resolution", "../../packages/event-bus", "../../packages/event-types", "../../packages/job-orchestrator", "../../packages/llm-gateway"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*" = ["E501"]
"api/modules/**/models.py" = ["F821"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = "api.modules.*.models"
disable_error_code = ["name-defined"]

[[tool.mypy.overrides]]
module = ["api.core.security", "api.core.logging"]
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = ["api.versions.openapi", "api.versions.docs", "api.modules.auth.dependencies"]
disallow_untyped_defs = false
disable_error_code = ["type-arg", "no-untyped-def"]
