[project]
name = "verdin-worker"
version = "4.2.0"
description = "Verdin Credit Platform background worker"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.3",
    "pydantic-settings>=2.7.0",
    "redis>=5.2.1",
    "structlog>=24.4.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "minio>=7.2.12",
    "pypdf>=5.1.0",
    "Pillow>=11.0.0",
    "pytesseract>=0.3.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.pytest.ini_options]
pythonpath = [".", "../../packages/document-classification"]
testpaths = ["tests"]
